Avoid free-running idle suspending loop

Bug: 756311
Change-Id: Id38d8f14eefeff1d071062967c4f08b77ac84e69